--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
+@import "./fonts.css";
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,16 +15,18 @@
 body {
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1, h2, h3, h4, h5, h6 { 
+  font-family: "Javanese Text", sans-serif;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.main-content {
+  flex: 1;
+}
+
+.page-html {
+  height: '100%';
 }
